Fix NavBar z-index

--- a/src/components/Layout/Navigation/NavBar.module.scss
+++ b/src/components/Layout/Navigation/NavBar.module.scss
@@ -3,7 +3,7 @@ nav {
   position: relative;
   height: 4rem;
   background-color: #333;
-  z-index: 30;
+  z-index: 15;
   .nav {
     display: flex;
     align-items: center;
